--- a/homepage.html
+++ b/homepage.html
@@ -52,6 +52,7 @@
       <img src="/img/flag/IMG-20211003-WA0001.jpg">
       <h6>Flag bags</h6>
     </div>
+    <!--comment-->
   </section>
   <section class="product1">
     <div class="product-header">
